<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_normal_16"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="horizontal">

    <TextView
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="end|center_vertical"
        android:text="@string/listview_header_nominal"
        android:textStyle="bold" />

    <TextView
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/spacing_small_8"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/listview_header_name"
        android:textStyle="bold" />

    <TextView
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/spacing_small_8"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/listview_header_value"
        android:textStyle="bold" />

</LinearLayout>